// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: filter by both 1`] = `
<div
  className="hotspots-list-single-category huge-spacer-bottom"
>
  <h1
    className="hotspot-list-header bordered-bottom"
  >
    <SecurityHotspotIcon
      className="spacer-right"
    />
    hotspots.list_title.2
  </h1>
  <div
    className="big-spacer-bottom"
  >
    <div
      className="hotspot-category"
    >
      <div
        className="hotspot-category-header"
      >
        <strong
          className="flex-1 spacer-right break-word"
        >
          A1 - A1 - SQL Injection
          <hr />
          CWE-327 - Use of a Broken or Risky Cryptographic Algorithm
        </strong>
      </div>
      <ul>
        <li
          data-hotspot-key="h1"
          key="h1"
        >
          <HotspotListItem
            hotspot={
              {
                "author": "Developer 1",
                "component": "com.github.kevinsawicki:http-request:com.github.kevinsawicki.http.HttpRequest",
                "creationDate": "2013-05-13T17:55:39+0200",
                "key": "h1",
                "line": 81,
                "message": "'3' is a magic number.",
                "project": "com.github.kevinsawicki:http-request",
                "resolution": undefined,
                "rule": "checkstyle:com.puppycrawl.tools.checkstyle.checks.coding.MagicNumberCheck",
                "securityCategory": "command-injection",
                "status": "TO_REVIEW",
                "updateDate": "2013-05-13T17:55:39+0200",
                "vulnerabilityProbability": "HIGH",
              }
            }
            onClick={[MockFunction]}
            onLocationClick={[MockFunction]}
            selected={true}
          />
        </li>
        <li
          data-hotspot-key="h2"
          key="h2"
        >
          <HotspotListItem
            hotspot={
              {
                "author": "Developer 1",
                "component": "com.github.kevinsawicki:http-request:com.github.kevinsawicki.http.HttpRequest",
                "creationDate": "2013-05-13T17:55:39+0200",
                "key": "h2",
                "line": 81,
                "message": "'3' is a magic number.",
                "project": "com.github.kevinsawicki:http-request",
                "resolution": undefined,
                "rule": "checkstyle:com.puppycrawl.tools.checkstyle.checks.coding.MagicNumberCheck",
                "securityCategory": "command-injection",
                "status": "TO_REVIEW",
                "updateDate": "2013-05-13T17:55:39+0200",
                "vulnerabilityProbability": "HIGH",
              }
            }
            onClick={[MockFunction]}
            onLocationClick={[MockFunction]}
            selected={false}
          />
        </li>
      </ul>
    </div>
  </div>
  <ListFooter
    count={2}
    loadMore={[MockFunction]}
    loading={false}
    total={2}
  />
</div>
`;

exports[`should render correctly: filter by category 1`] = `
<div
  className="hotspots-list-single-category huge-spacer-bottom"
>
  <h1
    className="hotspot-list-header bordered-bottom"
  >
    <SecurityHotspotIcon
      className="spacer-right"
    />
    hotspots.list_title.2
  </h1>
  <div
    className="big-spacer-bottom"
  >
    <div
      className="hotspot-category"
    >
      <div
        className="hotspot-category-header"
      >
        <strong
          className="flex-1 spacer-right break-word"
        >
          A1 - A1 - SQL Injection
        </strong>
      </div>
      <ul>
        <li
          data-hotspot-key="h1"
          key="h1"
        >
          <HotspotListItem
            hotspot={
              {
                "author": "Developer 1",
                "component": "com.github.kevinsawicki:http-request:com.github.kevinsawicki.http.HttpRequest",
                "creationDate": "2013-05-13T17:55:39+0200",
                "key": "h1",
                "line": 81,
                "message": "'3' is a magic number.",
                "project": "com.github.kevinsawicki:http-request",
                "resolution": undefined,
                "rule": "checkstyle:com.puppycrawl.tools.checkstyle.checks.coding.MagicNumberCheck",
                "securityCategory": "command-injection",
                "status": "TO_REVIEW",
                "updateDate": "2013-05-13T17:55:39+0200",
                "vulnerabilityProbability": "HIGH",
              }
            }
            onClick={[MockFunction]}
            onLocationClick={[MockFunction]}
            selected={true}
          />
        </li>
        <li
          data-hotspot-key="h2"
          key="h2"
        >
          <HotspotListItem
            hotspot={
              {
                "author": "Developer 1",
                "component": "com.github.kevinsawicki:http-request:com.github.kevinsawicki.http.HttpRequest",
                "creationDate": "2013-05-13T17:55:39+0200",
                "key": "h2",
                "line": 81,
                "message": "'3' is a magic number.",
                "project": "com.github.kevinsawicki:http-request",
                "resolution": undefined,
                "rule": "checkstyle:com.puppycrawl.tools.checkstyle.checks.coding.MagicNumberCheck",
                "securityCategory": "command-injection",
                "status": "TO_REVIEW",
                "updateDate": "2013-05-13T17:55:39+0200",
                "vulnerabilityProbability": "HIGH",
              }
            }
            onClick={[MockFunction]}
            onLocationClick={[MockFunction]}
            selected={false}
          />
        </li>
      </ul>
    </div>
  </div>
  <ListFooter
    count={2}
    loadMore={[MockFunction]}
    loading={false}
    total={2}
  />
</div>
`;

exports[`should render correctly: filter by cwe 1`] = `
<div
  className="hotspots-list-single-category huge-spacer-bottom"
>
  <h1
    className="hotspot-list-header bordered-bottom"
  >
    <SecurityHotspotIcon
      className="spacer-right"
    />
    hotspots.list_title.2
  </h1>
  <div
    className="big-spacer-bottom"
  >
    <div
      className="hotspot-category"
    >
      <div
        className="hotspot-category-header"
      >
        <strong
          className="flex-1 spacer-right break-word"
        >
          CWE-327 - Use of a Broken or Risky Cryptographic Algorithm
        </strong>
      </div>
      <ul>
        <li
          data-hotspot-key="h1"
          key="h1"
        >
          <HotspotListItem
            hotspot={
              {
                "author": "Developer 1",
                "component": "com.github.kevinsawicki:http-request:com.github.kevinsawicki.http.HttpRequest",
                "creationDate": "2013-05-13T17:55:39+0200",
                "key": "h1",
                "line": 81,
                "message": "'3' is a magic number.",
                "project": "com.github.kevinsawicki:http-request",
                "resolution": undefined,
                "rule": "checkstyle:com.puppycrawl.tools.checkstyle.checks.coding.MagicNumberCheck",
                "securityCategory": "command-injection",
                "status": "TO_REVIEW",
                "updateDate": "2013-05-13T17:55:39+0200",
                "vulnerabilityProbability": "HIGH",
              }
            }
            onClick={[MockFunction]}
            onLocationClick={[MockFunction]}
            selected={true}
          />
        </li>
        <li
          data-hotspot-key="h2"
          key="h2"
        >
          <HotspotListItem
            hotspot={
              {
                "author": "Developer 1",
                "component": "com.github.kevinsawicki:http-request:com.github.kevinsawicki.http.HttpRequest",
                "creationDate": "2013-05-13T17:55:39+0200",
                "key": "h2",
                "line": 81,
                "message": "'3' is a magic number.",
                "project": "com.github.kevinsawicki:http-request",
                "resolution": undefined,
                "rule": "checkstyle:com.puppycrawl.tools.checkstyle.checks.coding.MagicNumberCheck",
                "securityCategory": "command-injection",
                "status": "TO_REVIEW",
                "updateDate": "2013-05-13T17:55:39+0200",
                "vulnerabilityProbability": "HIGH",
              }
            }
            onClick={[MockFunction]}
            onLocationClick={[MockFunction]}
            selected={false}
          />
        </li>
      </ul>
    </div>
  </div>
  <ListFooter
    count={2}
    loadMore={[MockFunction]}
    loading={false}
    total={2}
  />
</div>
`;

exports[`should render correctly: filter by file 1`] = `
<div
  className="hotspots-list-single-category huge-spacer-bottom"
>
  <h1
    className="hotspot-list-header bordered-bottom"
  >
    <SecurityHotspotIcon
      className="spacer-right"
    />
    hotspots.list_title.2
  </h1>
  <div
    className="big-spacer-bottom"
  >
    <div
      className="hotspot-category"
    >
      <div
        className="hotspot-category-header"
      >
        <strong
          className="flex-1 spacer-right break-word"
        >
          <Tooltip
            overlay="src/apps/something/main.ts"
          >
            <span>
              <QualifierIcon
                className="little-spacer-right"
                qualifier="FIL"
              />
              main.ts
            </span>
          </Tooltip>
        </strong>
      </div>
      <ul>
        <li
          data-hotspot-key="h1"
          key="h1"
        >
          <HotspotListItem
            hotspot={
              {
                "author": "Developer 1",
                "component": "com.github.kevinsawicki:http-request:com.github.kevinsawicki.http.HttpRequest",
                "creationDate": "2013-05-13T17:55:39+0200",
                "key": "h1",
                "line": 81,
                "message": "'3' is a magic number.",
                "project": "com.github.kevinsawicki:http-request",
                "resolution": undefined,
                "rule": "checkstyle:com.puppycrawl.tools.checkstyle.checks.coding.MagicNumberCheck",
                "securityCategory": "command-injection",
                "status": "TO_REVIEW",
                "updateDate": "2013-05-13T17:55:39+0200",
                "vulnerabilityProbability": "HIGH",
              }
            }
            onClick={[MockFunction]}
            onLocationClick={[MockFunction]}
            selected={true}
          />
        </li>
        <li
          data-hotspot-key="h2"
          key="h2"
        >
          <HotspotListItem
            hotspot={
              {
                "author": "Developer 1",
                "component": "com.github.kevinsawicki:http-request:com.github.kevinsawicki.http.HttpRequest",
                "creationDate": "2013-05-13T17:55:39+0200",
                "key": "h2",
                "line": 81,
                "message": "'3' is a magic number.",
                "project": "com.github.kevinsawicki:http-request",
                "resolution": undefined,
                "rule": "checkstyle:com.puppycrawl.tools.checkstyle.checks.coding.MagicNumberCheck",
                "securityCategory": "command-injection",
                "status": "TO_REVIEW",
                "updateDate": "2013-05-13T17:55:39+0200",
                "vulnerabilityProbability": "HIGH",
              }
            }
            onClick={[MockFunction]}
            onLocationClick={[MockFunction]}
            selected={false}
          />
        </li>
      </ul>
    </div>
  </div>
  <ListFooter
    count={2}
    loadMore={[MockFunction]}
    loading={false}
    total={2}
  />
</div>
`;
